# synacor-challenge

./: Cargo.toml  README.md  arch-spec  validate.asm
src/: main.rs
src/synacor/: lib.rs
src/synacor/disassemble/: disassembler.rs  mod.rs
src/synacor/vmlib/: machine.rs  memory.rs  mod.rs  opcode.rs  registers.rs
src/vm/: machine.rs  maths.rs  memory.rs  mod.rs  opcode.rs  registers.rs  stack.rs  utils.rs
