[package]
name = "synacor"
version = "0.1.0"
authors = ["andrewflbarnes <andrewflbarnes@hotmail.co.uk>"]
edition = "2018"
default-run = "synvm"

[lib]
name = "synacorlib"
path = "src/synacor/lib.rs"

[[bin]]
name = "syntele"
path = "src/bin/teleporter/main.rs"

[[bin]]
name = "synvm"
path = "src/bin/vm/main.rs"

[[bin]]
name = "syndis"
path = "src/bin/disassembler/main.rs"

[dependencies]
